--- a/Prerequisites/Readme
+++ b/Prerequisites/Readme
@@ -1,1 +1,1 @@
-In this folder you can find the document [setup] through which you can setup your home lab setup..
+In this folder you can find the document through which you can setup your home lab setup..
